# Tic-tac-toe

./: .gitignore  CMakeLists.txt  README.md  Tictactoe.sln  Tictactoe.vcxproj.filters  makefile  makefile.txt
.github/workflows/: c-cpp.yml
Tictactoe/: Tictactoe.vcxproj
Tictactoe/src/: main.cpp
src/: main.cpp
src/core/: game.cpp  game.hpp
src/gui/: renderer.cpp  renderer.hpp
src/network/: network.cpp  network.hpp
